# client

./: .gitignore  CHANGELOG  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  VERSION  pyproject.toml  setup.py
cron/: pfl  pfl.timer
e_file/: e_file.py
man/: Makefile  e-file.1  e-file.1.md  pfl.1  pfl.1.md
pfl/: e_file.py  pfl.py
systemd/: pfl.service  pfl.timer
test/: test.sh
